feat : change tab name from ocr to pelaporan

--- a/templates/perencanaan.html
+++ b/templates/perencanaan.html
@@ -36,7 +36,7 @@
           <button role="tab" type="button"
               :class="tab=='ocr'?'flex whitespace-nowrap items-center h-8 px-5 font-medium rounded-lg outline-none focus:ring-2 focus:ring-cyan-400 focus:ring-inset text-cyan-400 shadow bg-white dark:text-white dark:bg-cyan-400':'flex whitespace-nowrap items-center h-8 px-5 font-medium rounded-lg outline-none focus:ring-2 focus:ring-cyan-400 focus:ring-inset hover:text-gray-800 focus:text-cyan-400 dark:text-gray-400 dark:hover:text-gray-400 dark:focus:text-gray-400'"
               aria-selected="" @click="tab = 'ocr'">
-              OCR
+              Pelaporan
           </button>
       </nav>
   </div>
