fix: update placeholder text for phone number input

--- a/templates/perencanaan.html
+++ b/templates/perencanaan.html
@@ -97,7 +97,7 @@
                 ⓘ
                 <span
                   class="hidden group-hover:block absolute bottom-full left-0 bg-gray-700 text-white text-xs rounded p-2 w-48">
-                  Masukkan nomor HP aktif pemohon
+                  Masukkan nomor HP aktif pemohon(contoh 8123456789)
                 </span>
               </span>
             </label>
